--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/cintiamh/Webpack3Templates#readme",
   "devDependencies": {
+    "autoprefixer": "^7.2.5",
     "css-loader": "^0.28.9",
     "eslint": "^4.16.0",
     "eslint-config-airbnb": "^16.1.0",
@@ -29,7 +30,11 @@
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.6.0",
     "extract-text-webpack-plugin": "^3.0.2",
+    "glob": "^7.1.2",
     "html-webpack-plugin": "^2.30.1",
+    "postcss-loader": "^2.0.10",
+    "purify-css": "^1.2.5",
+    "purifycss-webpack": "^0.7.0",
     "style-loader": "^0.20.1",
     "webpack": "^3.10.0",
     "webpack-dev-server": "^2.11.1",
