--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "webpack-dev-server --env development",
     "build": "webpack --env production",
     "lint": "eslint . --ext .js --ext .jsx",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "karma start karma.conf.js",
+    "test:watch": "npm run test -- --watch"
   },
   "repository": {
     "type": "git",
@@ -27,7 +28,9 @@
     "babel-plugin-transform-object-assign": "^6.22.0",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.6.1",
+    "chai": "^4.1.2",
     "clean-webpack-plugin": "^0.1.18",
     "css-loader": "^0.28.9",
     "eslint": "^4.16.0",
@@ -40,15 +43,27 @@
     "file-loader": "^1.1.6",
     "glob": "^7.1.2",
     "html-webpack-plugin": "^2.30.1",
+    "karma": "^2.0.0",
+    "karma-chai": "^0.1.0",
+    "karma-chrome-launcher": "^2.2.0",
+    "karma-mocha": "^1.3.0",
+    "karma-phantomjs-launcher": "^1.0.4",
+    "karma-spec-reporter": "0.0.32",
+    "karma-webpack": "^2.0.9",
+    "mocha": "^5.0.0",
+    "phantomjs-polyfill": "0.0.2",
     "postcss-loader": "^2.0.10",
+    "puppeteer": "^1.0.0",
     "purify-css": "^1.2.5",
     "purifycss-webpack": "^0.7.0",
+    "sinon": "^4.2.2",
     "style-loader": "^0.20.1",
     "uglifyjs-webpack-plugin": "^1.1.8",
     "url-loader": "^0.6.2",
     "webpack": "^3.10.0",
     "webpack-dev-server": "^2.11.1",
-    "webpack-merge": "^4.1.1"
+    "webpack-merge": "^4.1.1",
+    "yargs": "^11.0.0"
   },
   "dependencies": {
     "font-awesome": "^4.7.0"
