tests working with karma and coverage

--- a/.babelrc
+++ b/.babelrc
@@ -4,5 +4,15 @@
     "transform-object-rest-spread" ,
     "transform-object-assign",
     "transform-runtime"
-  ]
+  ],
+  "env": {
+    "karma": {
+      "plugins": [
+        [
+          "istanbul",
+          { "exclude": ["tests/**/*.spec.js"] }
+        ]
+      ]
+    }
+  }
 }
