--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Simple HTML pages with JavaScript supporting ES2015, CSS, and assets.",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server --env development",
+    "start": "npm run build && node build/app.js",
+    "dev": "node src/app.js",
+    "start:old": "webpack-dev-server --env development",
     "build": "webpack --env production",
     "lint": "eslint . --ext .js --ext .jsx",
     "test": "karma start karma.conf.js",
@@ -31,6 +33,7 @@
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.6.1",
+    "babel-preset-react": "^6.24.1",
     "chai": "^4.1.2",
     "clean-webpack-plugin": "^0.1.18",
     "css-loader": "^0.28.9",
@@ -58,16 +61,22 @@
     "puppeteer": "^1.0.0",
     "purify-css": "^1.2.5",
     "purifycss-webpack": "^0.7.0",
+    "react-hot-loader": "^3.1.3",
     "sinon": "^4.2.2",
     "style-loader": "^0.20.1",
     "uglifyjs-webpack-plugin": "^1.1.8",
     "url-loader": "^0.6.2",
     "webpack": "^3.10.0",
+    "webpack-dev-middleware": "^2.0.4",
     "webpack-dev-server": "^2.11.1",
+    "webpack-hot-middleware": "^2.21.0",
     "webpack-merge": "^4.1.1",
     "yargs": "^11.0.0"
   },
   "dependencies": {
-    "font-awesome": "^4.7.0"
+    "express": "^4.16.2",
+    "font-awesome": "^4.7.0",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0"
   }
 }
